--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ clear_screen = "0.1.0"
 ansi_term = "0.12.1"
 sysinfo = "0.35.2"
 ferris-says = "0.3.2"
-toml = "0.8.23"
-serde = {version = "1.0.219", features = ["derive"]}
+whoami = "2.0.0-pre.2"
 [profile.release]
 lto = true
 
