Changed the way input is handled, added command history although still need to fix some things.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ansi_term = "0.12.1"
 sysinfo = "0.35.2"
 ferris-says = "0.3.2"
 whoami = "2.0.0-pre.2"
+console = "0.15.11"
 [profile.release]
 lto = true
 
